# Knox-Key

./: .gitignore  BOM_suggested.csv  CONTRIBUTING.md  Knox Key Kicad.kicad_pcb  Knox Key Kicad.kicad_prl  Knox Key Kicad.kicad_sch  LICENSE  ORGANIZATION-SUMMARY.md  README-kryptonite-update.md  README.md  fp-info-cache  ~Knox Key Kicad.kicad_pcb.lck
backup-kryptonite-2026-03-10_224344/: Knox Key Kicad.kicad_sch
bom/: ibom.html
firmware/: README.md
firmware/knoxkey/: CMakeLists.txt  README.md
firmware/knoxkey/.github/workflows/: ci.yml  docs-deploy.yml
firmware/knoxkey/core/: compiler.h  cose.h  ctap.c  ctap.h  ctap_asn1.h  ctap_cbor.h  ctap_common.h  ctap_credentials.c  ctap_credentials_store.h  ctap_crypto.h  ctap_crypto_atecc.c  ctap_crypto_atecc.h  ctap_crypto_software.h  ctap_encode.h  ctap_errors.h  ctap_get_info.c  ctap_memory_storage.h  ctap_parse.h  ctap_pin.c  ctap_pin_protocol.h  ctap_pin_uv_auth_token_state.h  ctap_reset.c  ctap_storage.h  ctap_string.h  ctaphid.c  ctaphid.h  debug.h  terminal.h  utils.c  utils.h
firmware/knoxkey/crypto/hash/: hash.h
firmware/knoxkey/crypto/hkdf/: hkdf.c  hkdf.h
firmware/knoxkey/crypto/hmac/: hmac.h
firmware/knoxkey/crypto/sha256/: sha256.c  sha256.h
firmware/knoxkey/crypto/tiny-AES-c/test_package/: CMakeLists.txt
firmware/knoxkey/docs/content/architecture/: _category_.json
firmware/knoxkey/docs/content/development/: _category_.json
firmware/knoxkey/targets/stm32f072/: CMakeLists.txt
firmware/knoxkey/targets/stm32f072/Inc/: app.h  main.h  stm32f0xx_it.h
firmware/knoxkey/targets/stm32f072/Src/: stm32f0xx_it.c  syscalls.c  sysmem.c  usb.c  usb_descriptors.c
firmware/knoxkey/targets/stm32f072/cmake/: gcc-arm-none-eabi.cmake
firmware/knoxkey/targets/stm32f072/cmake/stm32cubemx/: CMakeLists.txt
firmware/knoxkey/targets/stm32l433/: STM32L433CBTx_FLASH.ld
firmware/knoxkey/targets/stm32l433/Inc/: app.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usb.h
firmware/knoxkey/targets/stm32l433/Src/: app.c  flash_storage.c  hal_i2c_stm32.c
firmware/lionkey/: CMakePresets.json
firmware/lionkey/core/: ctap_crypto_atecc.h  ctaphid.h
firmware/lionkey/targets/stm32f072/: STM32F072CBUx_FLASH.ld
firmware/lionkey/targets/stm32l433/: CMakeLists.txt
hardware/: Knox Key Kicad.kicad_pcb  Knox Key Kicad.kicad_pro
manufacturing/: component-positions.csv
manufacturing-kryptonite/gerbers/: kryptonite-B_Mask.gbr  kryptonite-F_Cu.gbr  kryptonite-F_Fab.gbr  kryptonite-F_Mask.gbr  kryptonite-F_Silkscreen.gbr  kryptonite-job.gbrjob
manufacturing/gerbers/: knox-key-B_Cu.gbr  knox-key-B_Paste.gbr  knox-key-B_Silkscreen.gbr  knox-key-Edge_Cuts.gbr  knox-key-F_Paste.gbr  knox-key.drl
type-c.pretty/: TYPE-C-31-G-01.kicad_mod
(+12 files in other folders)
